# pytrace-method

./: README.md  pyproject.toml
pytrace/: __init__.py  tracer.py
pytrace_method/: tracer.py
pytrace_method.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
